--- a/bins/gal-gui/index.html
+++ b/bins/gal-gui/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="/live2d.min.js"></script>
     <script src="/live2dcubismcore.min.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
