--- a/quick_start.html
+++ b/quick_start.html
@@ -154,17 +154,21 @@
 <pre><code class="language-bash">$ git clone https://github.com/Uni-Gal/Ayaka.git
 $ cd Ayaka
 </code></pre>
+<h2 id="add-targets-for-webassembly"><a class="header" href="#add-targets-for-webassembly">Add targets for WebAssembly</a></h2>
+<pre><code class="language-bash">$ rustup target add wasm32-wasi
+$ rustup target add wasm32-unknown-unknown
+</code></pre>
 <h2 id="test-the-utilities"><a class="header" href="#test-the-utilities">Test the utilities</a></h2>
 <pre><code class="language-bash">$ make test
-</code></pre>
-<h2 id="release-build-of-frontends"><a class="header" href="#release-build-of-frontends">Release build of frontends</a></h2>
-<pre><code class="language-bash">$ make release
 </code></pre>
 <h2 id="run-examples"><a class="header" href="#run-examples">Run examples</a></h2>
 <pre><code class="language-bash">$ # Run Fibonacci2
 $ make example-Fibonacci2
 $ # Run Orga in GUI
 $ make example-Orga-gui
+</code></pre>
+<h2 id="release-build-of-frontends"><a class="header" href="#release-build-of-frontends">Release build of frontends</a></h2>
+<pre><code class="language-bash">$ make release
 </code></pre>
 
                     </main>
