deploy: e79bc7b1194d418e07bb424b1c8b636e4552ce32

--- a/config/script.html
+++ b/config/script.html
@@ -135,7 +135,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="script"><a class="header" href="#script">Script</a></h1>
-<p>The script we use is dynamic typed.
+<p>Ayaka script is dynamic typed.
 The only supported types are unit <code>~</code>, boolean, integer, and string.</p>
 <pre><pre class="playground"><code class="language-rust edition2021"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
