--- a/config/summary.html
+++ b/config/summary.html
@@ -135,10 +135,10 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="config"><a class="header" href="#config">Config</a></h1>
-<p>Our config file is based on YAML. The structure is simple to author.</p>
+<p>Ayaka config is based on YAML. The structure is simple to author.</p>
 <p>The articles below uses <code>ayaka-check</code> to show the example,
 it may behave a little different in GUI.
-To run the example, you need to create a config file with full <a href="./structure.html">structure</a>, go to the <code>bins</code> folder and run</p>
+To run the examples, you need to create a config file with full <a href="./structure.html">structure</a>, go to the <code>bins</code> folder and run</p>
 <pre><code class="language-bash">$ cargo run --package ayaka-check -- path/to/config.yaml --auto
 </code></pre>
 
