--- a/config/script.html
+++ b/config/script.html
@@ -158,14 +158,12 @@ The only supported types are unit <code>~</code>, boolean, integer, and string.<
 It is then converted to string and appended to the text.</p>
 <h2 id="example-fibonacci"><a class="header" href="#example-fibonacci">Example: Fibonacci</a></h2>
 <p>With the config file, we can even calculate some math problems. For example, Fibonacci:</p>
-<pre><code class="language-yaml">-
-  tag: init
+<pre><code class="language-yaml">- tag: init
   texts:
     - 1
     - \exec{$n = 50; $a = 1; $b = 1; $i = 1; $b}
   next: loop
--
-  tag: loop
+- tag: loop
   texts:
     - \exec{c = $b; $b += $a; $a = c; $i += 1; $b}
   next: \exec{if($i &lt; $n, &quot;loop&quot;)}
