--- a/config/structure.html
+++ b/config/structure.html
@@ -168,14 +168,12 @@ Here shows the properties:</p>
 base_lang: en
 paras:
   en:
-    -
-      tag: para1
+    - tag: para1
       texts:
         - This is the first line.
         - This is the second line.
       next: para2
-    -
-      tag: para2
+    - tag: para2
       texts:
         - The first line of the second paragraph.
 </code></pre>
